name:           flextml
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Ulthar

executable flextml
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers >= 0.5,
                   hxt
  ghc-options:     -Wall

